--- a/static/styles.css
+++ b/static/styles.css
@@ -69,30 +69,13 @@ footer p {
 }
 
 /* Scroll to Top Button */
-#btnScrollToTop1 {
+#btnScrollToTop {
     position: fixed;
     bottom: 30px;
     right: 30px;
     display: none;
     z-index: 99;
     animation: pulse 1s infinite alternate; 
-}
-
-/* Floating Theme Toggle Button */
-.btn-floating {
-    position: fixed;
-    top: 50px; /* Position from the top */
-    right: 30px; /* Position from the right */
-    z-index: 99;
-    border-radius: 20%;
-    padding: 15px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
-    transition: background-color 0.3s, transform 0.3s;
-}
-
-.btn-floating:hover {
-    background-color: #ccc;
-    transform: scale(1.1);
 }
 
 /* Scrolling text */
@@ -234,55 +217,3 @@ footer p {
     }
 }
 
-/* Dark theme */
-
-/* Navbar */
-body.dark-theme .navbar {
-    background-color: #343a40;
-}
-
-body.dark-theme .navbar-brand {
-    color: #fff;
-}
-
-body.dark-theme .navbar-nav .nav-link {
-    color: #ccc;
-}
-
-/* Hero Section */
-body.dark-theme #hero {
-    background-color: #444;
-    color: #fff;
-}
-
-/* About Section */
-body.dark-theme #about {
-    background: linear-gradient(135deg, #444, #888);
-}
-
-/* Projects Section */
-body.dark-theme #projects {
-    background-color: #333;
-    color: #fff;
-}
-
-body.dark-theme .card {
-    background-color: #444;
-    color: #fff;
-}
-
-body.dark-theme .card:hover {
-    box-shadow: 0 0 20px rgba(255, 255, 255, 0.1);
-}
-
-/* Contact Section */
-body.dark-theme #contact {
-    background-color: #222;
-    color: #ddd;
-}
-
-/* Footer */
-body.dark-theme footer {
-    background-color: #111;
-    color: #aaa;
-}
